DevDay_17112020/01-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: devday
---
apiVersion: v1
kind: Pod
metadata:
  name: devday
  namespace: devday
  labels:
    app: nginx
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
