DevDay_17112020/02-nginxIngress.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: devdayingress
---
apiVersion: v1
kind: Pod
metadata:
  name: devdayingress
  namespace: devdayingress
  labels:
    app: devdayingress
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: devdayingress
  namespace: devdayingress
spec:
  selector:
    app: devdayingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devdayingress
  namespace: devdayingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: devdayingress
          servicePort: 80
